# prod

./: .bandit  .flake8  README.md  mypy.ini  prod-launch.py  prod.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py  setup.py
.github/workflows/: test.yml
config/: error_messages.json  prod-settings.ini  prod-settings.ini.example  settings.ini  settings.ini.example
config/prods/dlt/config/: software.ini
config/prods/tld/config/: pipeline.ini  software.ini
config/studio/: pipeline.ini  software.ini
src/: __init__.py  cli.py  config_manager.py  environment_manager.py  error_handler.py  errors.py  exceptions.py  logger.py  path_processor.py  production_environment.py  rez_manager.py  software_cli.py
tests/: README.md  __init__.py
tests/functional/: __init__.py
tests/functional/features/: cli.feature  configuration.feature  environment_variables.feature  production_environment.feature
tests/functional/step_defs/: __init__.py  test_cli_steps.py  test_configuration_steps.py  test_environment_variables_steps.py  test_production_environment_steps.py
tests/functional/steps/: configuration_steps.py
tests/unittest/: __init__.py  test_cli.py  test_config_manager.py  test_environment_activation.py  test_environment_manager.py  test_error_handler.py  test_interactive_scripts.py  test_logger.py  test_path_processor.py  test_production_environment.py  test_rez_manager.py  test_software_cli.py  test_verbose_mode.py
